06/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Moved EnhancedMenu to it's own package. I will be creating a new menu
      class that is specially designed for jsXe's LocalizedActions
    * Created a new option for how many items can be in menus before they spill
      over.

06/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated actions in jsXe so that actions can be easily localized and
      so that they can be assigned shortcuts. Future actions that are registered
      with jsXe will extend this class. The ActionManager now manages ActionSets
      and key bindings within jsXe.

06/15/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new Status column to the Plugin Manager dialog
    * Added new plugin properties for the plugin author and release date

06/14/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the EditAction class for future actions in jsXe.
      The messages, menu mnemonics, and tooltips will be able to be
      localized and the shortcuts will be able to be set via the
      InputManager.

06/13/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the InputManager for maintaining the key bindings for actions in
      jsXe.
    * Updated the param string for PropertyChanged messages.
    * Moved the general options pane to it's own file.

06/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a PropertyChanged event for when one of jsXe's properties changes.
    * Updated lots of javadoc
    * jsXe's global options now implements AbstractOptionPane

06/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the document options to use abstract classes to lay out the
      dialog. OptionsPanel is now deprecated in favor of using the OptionPane
      and AbstractOptionPane classes.
    * Updated dialogs to use setVisible() instead of show()

06/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new Document Options Dialog which handles settings on a per
      document basis.