@@ -47,7 +47,7 @@ import java.util.*;
  * @author Ian Lewis (<a href="mailto:IanLewis@member.fsf.org">IanLewis@member.fsf.org</a>)
  * @version $Id$
  */
-public class EnhancedMenu extends JMenu implements EBListener {
+public class EnhancedMenu extends JMenu {
     
     //{{{ EnhancedMenu constructor
     /**
