@@ -1,3 +1,9 @@
+06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added back rudimentary key bindings using Swing Actions so they get
+      dispached by Swing and are displayed in menus. But infrastructure is
+      in place to allow jsXe to catch key bindings itself.
+
 06/21/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Moved EnhancedMenu to it's own package. I will be creating a new menu
